# app

./: .dockerignore  .env.example  .gitignore  ADMIN_GUIDE.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
core-service/: .dockerignore  .gitignore  Dockerfile  README.md  app.yaml  pyproject.toml
core-service/core_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core-service/src/core/: core_account.py  day_announcer_service.py  day_client.py  day_events.py
core-service/src/core/inventory/: model.py
core-service/src/core/monitoring/: account_monitors.py
core-service/src/core/rpc/: __init__.py  server.py
core-service/src/core/runtime/: __init__.py  profession_spec.py  scheduler.py  startup_manager.py
core-service/src/core/services/: scheduler_service.py
core-service/src/database/: ddl.py  repair_database.py
core-service/src/database/DTO/: manga.py
core-service/src/database/repository/: manga.py
core-service/src/mangabuff/: setup.py
core-service/src/mangabuff/daily/: daily_monitor.py
core-service/src/mangabuff/manga_load/: catalog_loader.py  inventory.py  manga_loader.py  models.py  parsers.py
core-service/src/mangabuff/personal/: auth_service.py
core-service/src/mangabuff/quiz/: inventory.py  quiz_monitor.py
core-service/src/mangabuff/reader/: reader.py  reading_monitor.py
core-service/src/mangabuff/session/: bot_session.py  http_result.py
core-service/src/mangabuff/session/socket/: socket_service.py
core-service/src/utils/: logging.py  time.py
core-service/tests/: test_scheduler_service.py
day_service/: Dockerfile  README.md  pyproject.toml
day_service/day_service/: config.py  db.py  main.py  redis_bus.py  scheduler.py  timeutil.py
queue_service/: Dockerfile  README.md  pyproject.toml
queue_service/queue_service/: config.py  db.py  main.py  worker.py
src/core/: account_client.py  account_events.py  core_account.py  day_announcer_service.py
src/database/: ddl.py  migrate_reads_schema.py  setup.py
src/mangabuff/: setup.py
telegram_service/: Dockerfile  README.md  pyproject.toml
telegram_service/telegram_service/: bot.py  config.py  core_client.py  main.py  middlewares.py  nav.py
telegram_service/telegram_service/routers/: help.py  logs.py  stats.py
telegram_service/telegram_service/routers/accounts/: __init__.py  _common.py  add.py  filters.py  grouping.py  list_.py  loader_tools.py  menu.py  profession.py  profession_tools.py  reader_tools.py  search.py  slots.py
tests/: test_scheduler_service.py
(+12 files in other folders)
