[project]
name = "core-service"
version = "0.2.0"
description = "Business core: scheduler, professions (mining/quiz/daily/reader/...), exposed to other services (telegram-service, ...) exclusively via generic HTTP RPC (src/core/rpc/server.py). No Telegram/aiogram here anymore — see ../telegram_service."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "httpx[http2,https2]>=0.28.1",
    "redis>=5.1.0",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "tzdata>=2026.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "account-service-client @ git+ssh://git@github.com/Red1ngs/account-service.git@v0.1.1#subdirectory=client",
    "redis-service-client @ git+ssh://git@github.com/Red1ngs/redis-service.git@v0.1.1#subdirectory=client",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
