[project]
name = "telegram-service"
version = "0.1.0"
description = "Standalone Telegram admin-bot service. Talks to core-service exclusively over HTTP RPC (src/core/rpc/server.py in the sibling core-service image) — no business code, no shared filesystem, no shared database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.28.2",
    "httpx>=0.28.1",
    "dotenv>=0.9.9",
]

[tool.setuptools.packages.find]
include = ["telegram_service*"]
